# ndsjit

./: .gitignore  Cargo.toml  Dockerfile  README.md  asm_single_instr.sh  rustfmt.toml
src/: abi.rs  asm.rs  codegen.rs  compiler.rs  cpu.rs  disasm.rs  ir.rs  jit.rs  lib.rs  main.rs  reader.rs  translate.rs  vm.rs
src/asm/: abi.rs  alloc.rs  block_translator.rs  execbuffer.rs  instruction_translator.rs  mod.rs  vreg.rs  x64.rs  x64_ref.rs
src/asm/x64/: tests.rs
src/compiler/: #emitter.rs#  .#emitter.rs  emitter.rs  execbuffer.rs
src/cpu/: arm7.rs  mod.rs
src/disasm/: arm.rs  armv4t.rs  bits.rs  tests.rs  thumb.rs
src/disasm/armv4t/: instruction.rs  parsing.rs
src/execbuffer/: mod.rs
src/ir/: parsing.rs
src/reader/: parsing.rs
src/translate/: block_translator.rs  instruction_translator.rs
tests/: disassembler_test.rs  jit_tests.rs
tests/parsing/: mod.rs
tests/test_programs/: data_proc.asm
